tests/integration/snapshots/wallet/test_wallet_remove_by_name_with_broken_wallets_toml.stderr.txt
Error: TOML parse error at line 1, column 9
  |
1 | [wallets
  |         ^
unclosed table, expected `]`

